@@ -1,4 +1,4 @@
 /* This string is written to the output primary header as CAL_VER. */
 
-# define WF3_CAL_VER "3.4.1(02-Apr-2017)"
+# define WF3_CAL_VER "3.4.1(10-Apr-2017)"
 # define WF3_CAL_VER_NUM "3.4.1"
